--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,63 +1,34 @@
-name: CI (Windows, offline HF)
-
+name: ci
 on:
   push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
 
 jobs:
   test:
     runs-on: windows-latest
-    timeout-minutes: 25
-
-    env:
-      HF_HUB_OFFLINE: "1"
-      TRANSFORMERS_OFFLINE: "1"
-      SRO_CACHE_DIR: models_cache
-      HF_HOME: models_cache
-      SENTENCE_TRANSFORMERS_HOME: models_cache
-      PYTHONHASHSEED: "0"
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+          cache: pip
+
+      - name: Install deps (fallback minimal)
+        shell: pwsh
+        run: |
+          python -m pip install -U pip
+          pip install torch --index-url https://download.pytorch.org/whl/cpu
+          pip install -r requirements.txt
+          pip install sentence-transformers
 
       - name: Restore models_cache
-        id: cache-restore
         uses: actions/cache/restore@v4
         with:
           path: models_cache
-          key: models-cache-win-v1
-
-      - name: Fail if cache not present (no HF in CI)
-        if: ${{ steps.cache-restore.outputs.cache-hit != 'true' }}
-        shell: pwsh
-        run: |
-          Write-Error "ERROR: models_cache not found in CI cache.`nRun the 'Seed HF models cache' workflow once."
-          exit 1
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-
-      # Requirements path exists => use it
-      - name: Install deps (requirements.txt)
-        if: ${{ hashFiles('requirements.txt') != '' }}
-        shell: pwsh
-        run: |
-          python -m pip install -U pip wheel setuptools
-          pip install -r requirements.txt
-
-      # No requirements.txt => fallback minimal set
-      - name: Install deps (fallback minimal)
-        if: ${{ hashFiles('requirements.txt') == '' }}
-        shell: pwsh
-        run: |
-          python -m pip install -U pip wheel setuptools
-          pip install --index-url https://download.pytorch.org/whl/cpu torch
-          pip install "transformers<5" sentence-transformers rank-bm25 numpy scikit-learn pytest
+          key: models-cache-win-v2
+          restore-keys: |
+            models-cache-win-
 
       - name: list cache
         shell: pwsh
@@ -65,8 +36,29 @@ jobs:
           Write-Host "models_cache size:"
           Get-ChildItem -Recurse models_cache | Measure-Object -Property Length -Sum
           if (-not (Test-Path models_cache)) { Write-Error "models_cache missing"; exit 2 }
+          # sanity check: ST config.json must exist
+           = Get-ChildItem -Recurse models_cache -Filter config.json | Where-Object { .FullName -match "sentence-transformers.*all-MiniLM-L6-v2" }
+          if (-not ) { Write-Error "Sentence-Transformers all-MiniLM-L6-v2 not found in cache"; exit 3 }
 
-      - name: Run tests (quiet)
+      - name: Prepare dev data
         shell: pwsh
-        run: pytest -q
+        env:
+          HF_HUB_OFFLINE: "1"
+          TRANSFORMERS_OFFLINE: "1"
+          SRO_CACHE_DIR: models_cache
+          HF_HOME: models_cache
+          SENTENCE_TRANSFORMERS_HOME: models_cache
+          TRANSFORMERS_CACHE: models_cache
+        run: |
+          python -m scripts.make_dev_pairs
 
+      - name: Run tests (offline)
+        shell: pwsh
+        env:
+          HF_HUB_OFFLINE: "1"
+          TRANSFORMERS_OFFLINE: "1"
+          SRO_CACHE_DIR: models_cache
+          HF_HOME: models_cache
+          SENTENCE_TRANSFORMERS_HOME: models_cache
+          TRANSFORMERS_CACHE: models_cache
+        run: pytest -q
