--- a/mypy.ini
+++ b/mypy.ini
@@ -1,15 +1,16 @@
 [mypy]
 python_version = 3.10
-ignore_missing_imports = True
+warn_redundant_casts = True
+warn_unused_ignores = True
 no_implicit_optional = True
-warn_unused_configs = True
-strict_optional = True
-# Keep it simple; no verbose regex (that caused your parse error)
-exclude = ^(models_cache/|artifacts/)$
+disallow_any_generics = True
+check_untyped_defs = True
 
-# Silence noisy modules for now; we’ll tighten later
-[mypy-sro.prover.s2_frontier]
-ignore_errors = True
+[mypy-torch.*]
+ignore_missing_imports = True
 
-[mypy-sro.prover.s5_bounded_search]
-ignore_errors = True
+[mypy-transformers.*]
+ignore_missing_imports = True
+
+[mypy-faiss.*]
+ignore_missing_imports = True
