--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.ruff]
 line-length = 100
 target-version = "py310"
-select = ["E", "F", "I", "UP"]
+select = ["E", "F", "I", "B"]
 ignore = [
   "F401",  # allow re-exports in __init__.py
 "E501",
