--- a/mypy.ini
+++ b/mypy.ini
@@ -5,10 +5,8 @@ warn_unused_ignores = True
 no_implicit_optional = True
 disallow_any_generics = True
 check_untyped_defs = True
-# Don’t crawl every transitive import. Treat them as “Any”.
 follow_imports = skip
 
-# 3p libs: silence missing stubs
 [mypy-pandas.*]
 ignore_missing_imports = True
 [mypy-sklearn.*]
@@ -24,7 +22,7 @@ ignore_missing_imports = True
 [mypy-torch.*]
 ignore_missing_imports = True
 
-# Legacy modules we’re not refactoring in V2
+# We are not refactoring legacy now.
 [mypy-sro.config]
 ignore_errors = True
 [mypy-sro.embeddings.*]
@@ -32,4 +30,4 @@ ignore_errors = True
 [mypy-sro.utils.*]
 ignore_errors = True
 [mypy-sro.retrieval.hybrid]
-ignore_errors = True  # keep our P5 function working; don’t lint legacy blocks around it
+ignore_errors = True
