--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,20 @@
 [tool.ruff]
 line-length = 100
-target-version = "py310"
+
+[tool.ruff.lint]
 select = ["E", "F", "I", "B"]
 ignore = [
-  "F401",  # allow re-exports in __init__.py
-"E501",
+  "E402",  # env vars before imports in CLI scripts
+  "E501",  # long lines – not worth wrapping for V2
+  "B905",  # zip(strict=...) pedantry
+  "B008",  # default-arg calls
 ]
-exclude = ["models_cache", "artifacts"]
 
 [tool.pytest.ini_options]
-testpaths = ["tests"]
 addopts = "-q"
+
+[project.optional-dependencies]
+dev = ["ruff", "mypy", "pytest", "pytest-cov", "types-PyYAML"]
 
 [tool.coverage.run]
 branch = true
